# prosit

./: Cargo.toml  rust.proto
examples/prosit/: Cargo.toml
examples/prosit/proto/: hello.proto  rust.proto
prost-build/: Cargo.toml
prost-build/src/: code_generator.rs
prost-derive/: Cargo.toml
prost-derive/src/field/: scalar.rs
prost-types/src/: protobuf.rs
src/: encoding.rs
tests/: Cargo.toml
tests/src/: address.proto  address.rs  build.rs  datetime.proto  datetime.rs  dec256.proto  dec256.rs  denom.proto  denom.rs  lib.rs  message_encoding.rs  uint256.proto  uint256.rs
