[workspace]

[package]
name = "prosit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { path = '../..' }
uuid = "0.8"
url = "2"
chrono = "0.4"
cosmwasm-std = "1.1.5"

[build-dependencies]
prost-build = { path = '../../prost-build' }
